refactor : collect(Collectors.toList())) -> toList()로 코드 변경